<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lecker Bestelung</string>
    <string name="splash_text">Highly committed to quality products und excellent services</string>
    <string name="FlamaHenkel">FlamaHenkel</string>

    // Tab Menu
    <string name="home">Essen</string>
    <string name="cart">Warenkorb</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Kontakt</string>
    <string name="order">Kaufhistorie</string>

    // action
    <string name="action_ok">Zustimmen</string>
    <string name="action_cancel">Stornieren</string>

    // dialog
    <string name="waiting_message">Bitte warten Sie einen Moment...</string>

    // msg
    <string name="error_not_connect_to_internet">Bitte überprüfen Sie Ihre Netzwerkverbindung</string>
    <string name="msg_exit_app">Möchten Sie die App beenden?</string>

    <string name="category_title">Directory</string>
    <string name="food_suggest">Empfehlen</string>
    <string name="food_detail_title">Essen Beschreibung</string>
    <string name="add_to_cart">In den Warenkorb hinzufügen</string>
    <string name="added_to_cart">Zum Warenkorb hinzugefügt</string>
    <string name="cancel">Stornieren</string>
    <string name="send_feedback_success">Feedback erfolgreich abgegeben!</string>
    <string name="name_require">Bitte geben Sie den vollständigen Namen ein</string>
    <string name="comment_require">Bitte geben Sie Ihr Feedback ein</string>
    <string name="order_cart">Bestellen</string>
    <string name="total">Insgesamt:</string>
    <string name="delete">Löschen</string>
    <string name="confirm_delete_food">Bestätigen Sie die Entfernung aus dem Warenkorb</string>
    <string name="message_delete_food">Möchten Sie dieses Gericht wirklich löschen?</string>
    <string name="dialog_cancel">Stornieren</string>
    <string name="order_detail">Bestelen Details</string>
    <string name="address_delivery">Lieferaddresse</string>
    <string name="message_enter_infor_order">Bitte geben Sie die Lieferinformationen ein</string>
    <string name="hint_search_name">Der Name des Gerichts...</string>
    <string name="price_label">Preis :</string>
    <string name="description_label">Details </string>
    <string name="more_image_label">Mehr Photo</string>
    <string name="payment_method">Zahlungsarten</string>
    <string name="payment_method_cash">Bar</string>
    <string name="label_sub">-</string>
    <string name="label_add">+</string>
    <string name="label_quantity_1">1</string>
    <string name="label_price_0">0 EUR</string>
    <string name="label_discount">Rabatt</string>

    <string name="feedback_name">Name</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Phone Nummer</string>
    <string name="feedback_comment">Feedback (*)</string>
    <string name="send_feedback">Feedback schicken</string>

    <string name="label_id">Bestelen ID:</string>
    <string name="label_name">Name :</string>
    <string name="label_phone">Phone Nummer:</string>
    <string name="label_address">Lieferaddress:</string>
    <string name="label_price">Insgesamt:</string>
    <string name="label_date">Bestellen Datum:</string>
    <string name="label_payment">Rabatt:</string>
    <string name="label_menu">Menu:</string>

    <string name="status_new">Ausstehend...</string>
    <string name="status_cancel">Stornierung der Bestellung</string>
    <string name="status_process">Laufende Lieferungen</string>
    <string name="status_success">Erfolgreich</string>
    <string name="status_fail">fehlgeschlagen</string>
    <string name="quantity">Menge:</string>
    <string name="list_food_order">Liste der Gerichte</string>

    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_skype">Skype</string>
    <string name="label_youtube">Youtube</string>
    <string name="label_whatsapp">Whatsapp</string>

    <string name="msg_get_date_error">Es ist ein Fehler aufgetreten. Bitte versuchen Sie es später noch einmal</string>
    <string name="msg_order_success">Bestellung erfolgreich, bitte überprüfen Sie Ihre Bestellung in der Kaufhistorie.</string>
    <string name="american">Americanisch</string>
    <string name="chinese">Chinesisch</string>
    <string name="thai">Thailändisch</string>
    <string name="vietnamese">Vietnamesisch</string>
    <string name="no_result">Kein Ergibnis</string>
    <string name="tile_details">Essen Beschreibung</string>
    <string name="text_loading">Wird geladen...</string>
    <string name="add_cart_success">Erfolgreich in den Warenkorb hinzufügen</string>
    <string name="empty_cart">Warenkorb ist leer !!</string>
    <string name="please_wait">Bitte warten Sie einen Monent...</string>
    <string name="value_not_emty">Bitte stellen Sie sicher, dass die Felder nicht leer sind\n</string>
    <string name="search">Suchen</string>
</resources>
