<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="26dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="@dimen/define_dimen_28"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:gravity="center"
                android:maxLines="2"
                android:paddingHorizontal="@dimen/define_dimen_10"
                android:text="@string/confirm_delete_food"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_blue_shape_corner_6"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/action_ok"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:background="@drawable/bg_gray_shape_corner_6"
                android:layout_marginHorizontal="28dp"
                android:paddingVertical="12dp"
                android:maxLines="2"
                android:text="@string/cancel"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>