<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/toolbar"
            layout="@layout/rl_toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_no_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_cart"
            android:textAlignment="center"
            android:textSize="@dimen/define_dimen_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_food_cart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/layout_bottom"
            android:layout_margin="@dimen/define_dimen_20"
            app:layout_constraintBottom_toTopOf="@id/layout_bottom"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_cart"/>

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:layout_toStartOf="@+id/tv_order_cart"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/define_dimen_10"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size_xnormal"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_order_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_green_shape_corner_6"
                    android:padding="@dimen/define_dimen_12"
                    android:text="@string/order_cart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>